--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD330 Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <h1>WDD330 Portfolio</h1>
-    <ol id="content-links"></ol>
-    
+    <header>
+        <h1>WDD330 Portfolio</h1>
+    </header>
+    <main>
+        <ol id="content-links"></ol>
+    </main>
+
 </body>
 </html>
