--- a/week1/index.html
+++ b/week1/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 1 Notes</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <h1>Week 1</h1>
+    <p class="map">Back to <a href="../index.html">Home</a></p>
+    <header>
+        <h1>Week 1</h1>
+    </header>
+    <p><a href="practice/template.html">Practice</a> from Doing Stuff with Web Things</p>
     <h2>Notes</h2>
-    <p></p>
+    <ul>
+        <li>When creating a github repo on the site, it's important to publish the site though github pages. I've never had to do that before.</li>
+        <li>Start building a website for the mobile before you make the desktop view.</li>
+        <ul>
+            <li>It's much harder to make it look good on mobile after it was made for desktop</li>
+        </ul>
+    </ul>
 </body>
 </html>
