--- a/week3/practice3.html
+++ b/week3/practice3.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice - Week 3</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <style>
+        main p {
+            width: 200px;
+            height: 200px;
+            margin: 10px;
+            background-color: #ccc;
+            float: left;
+        }
+    
+        .highlight {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
     <p class="map"><a href="../index.html">Home</a> > <a href="notes3.html">Week 3 Notes</a></p>
@@ -13,7 +26,18 @@
         <h1>Week 3 Practice</h1>
     </header> 
     <main>
-     
+        <p id='click'>Click On Me</p>
+        <p id='dblclick'>Double Click On Me</p>
+        <p id='mouse'>Hover On Me</p>
+        <p id='once'>A One Time Thing...</p>
+        <p>
+            <a id='broken' href='https://sitepoint.com'>Broken Link</a>
+        </p>
+        <ul id='list'>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+        </ul>
     </main>
 </body>
 <script> 
@@ -27,5 +51,76 @@ function makeUser() {
 
 let user = makeUser();  
 //alert( user.ref.name ); //nothing returns
+
+//click
+const clickParagraph = document.getElementById('click');
+clickParagraph.addEventListener('click',() => console.log('click') );
+clickParagraph.addEventListener('mousedown',() => console.log('down') );
+clickParagraph.addEventListener('mouseup',() => console.log('up') );
+
+//double click
+const dblclickParagraph = document.getElementById('dblclick');
+dblclickParagraph.addEventListener('dblclick', highlight);
+
+function highlight(event){
+    event.target.classList.toggle('highlight');
+}
+
+//hover
+const mouseParagraph = document.getElementById('mouse');
+mouseParagraph.addEventListener('mouseover', highlight);
+mouseParagraph.addEventListener('mouseout', highlight);
+
+//key down
+// addEventListener('keydown',highlight);
+
+//key up
+addEventListener('keyup', (event) => console.log(`You stopped pressing the key on ${new Date}`));
+
+//key
+addEventListener('keypress', (event) => console.log(`You pressed the ${event.key} character`));
+
+//key down modified
+addEventListener('keydown', (event) => console.log(`You pressed the ${event.key} character`));
+
+//touch end
+addEventListener('touchend', () => console.log('Touch stopped'));
+
+//remove event listener
+const onceParagraph = document.getElementById('once');
+onceParagraph.addEventListener('click', remove);
+
+function remove(event) {
+    console.log('Enjoy this while it lasts!');
+    onceParagraph.style.backgroundColor = 'pink';
+    onceParagraph.removeEventListener('click',remove);
+}
+
+// preventDefault() method
+const brokenLink = document.getElementById('broken');
+
+brokenLink.addEventListener('click',(event) => {
+    event.preventDefault();
+    console.log('Broken Link!');
+});
+// bubbling
+ulElement = document.getElementById('list');
+liElement = document.querySelector('#list li');
+
+// ulElement.addEventListener('click', (event) =>
+// console.log('Clicked on ul') );
+
+// liElement.addEventListener('click', (event) =>
+// console.log('Clicked on li') );
+
+//capturing
+ulElement.addEventListener('click', (event) =>
+console.log('Clicked on ul'),true);
+
+liElement.addEventListener('click', (event) =>
+console.log('Clicked on li'),true);
+
+//event delegation
+ulElement.addEventListener('click',highlight);
 </script>
 </html>
