--- a/week3/practice3.html
+++ b/week3/practice3.html
@@ -122,5 +122,7 @@ console.log('Clicked on li'),true);
 
 //event delegation
 ulElement.addEventListener('click',highlight);
+
+let p = document.querySelector
 </script>
 </html>
