--- a/week4/notes4.html
+++ b/week4/notes4.html
@@ -37,6 +37,9 @@
             </ul>
         </ul>
         <h3 id="ch12">JavaScript: Novice to Ninja Ch 12: OOP</h3>
+        <ul>
+            <li><a href="https://youtu.be/vDJpGenyHaA" target="_blank">OOP Crash Course</a> Resource (I left off on 18:26</li>
+        </ul>
         <div class="chunk"><p class="code">class Turtle {<br><br>
             constructor(name) {<br>
                 this.name = name;<br>
@@ -69,6 +72,10 @@
                 <li><span class="code">mike.weapon = 'Nunchakus';</span></li>
                 <li><span class="code">mike.attack(); // 'Feel the power of my Nunchakus!'</span></li>
             </ul>
+            <li>Add an underscore before a variable/method to make it private:  <span class="code">let _color = blue;</span></li>
+            <li>Use getters and setters</li>
+            <li>Creat an instance of an object using the <span class="code">Object.create()</span> method</li>
+            
         </ul>
         <h3 id="ch15">JavaScript: Novice to Ninja Ch 15: Modern JavaScript</h3>
       
