--- a/week4/notes4.html
+++ b/week4/notes4.html
@@ -38,7 +38,7 @@
         </ul>
         <h3 id="ch12">JavaScript: Novice to Ninja Ch 12: OOP</h3>
         <ul>
-            <li><a href="https://youtu.be/vDJpGenyHaA" target="_blank">OOP Crash Course</a> Resource (I left off on 18:26</li>
+            <li><a href="https://youtu.be/vDJpGenyHaA" target="_blank">OOP Crash Course</a> Video</li>
         </ul>
         <div class="chunk"><p class="code">class Turtle {<br><br>
             constructor(name) {<br>
@@ -75,6 +75,11 @@
             <li>Add an underscore before a variable/method to make it private:  <span class="code">let _color = blue;</span></li>
             <li>Use getters and setters</li>
             <li>Creat an instance of an object using the <span class="code">Object.create()</span> method</li>
+            <li>Resources/Videos on Mixins:</li>
+            <ul>
+                <li><a href="https://youtu.be/QB7h0yb4t2E" target="_blank">Javascript Mixins</a></li>
+                <li><a href="https://youtu.be/h4m-SIw9nEg" target="_blank">Mixins with Plain Javascript</a></li>
+            </ul>
             
         </ul>
         <h3 id="ch15">JavaScript: Novice to Ninja Ch 15: Modern JavaScript</h3>
