--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <h1>WDD330 Portfolio</h1>
     </header>
     <main>
+        <h2>Weeks</h2>
         <ol id="content-links"></ol>
+        <h2>By Chapter</h2>
+        <ul id="chapter-links"></ul>
     </main>
 
 </body>
