--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <header>
         <h1>WDD330 Portfolio</h1>
     </header>
-    <main>
-        <h2>Weeks</h2>
-        <ol id="content-links"></ol>
-        <h2>By Chapter</h2>
-        <ul id="chapter-links"></ul>
+    <main class="home">
+        <section>
+            <h2>Weeks</h2>
+            <ol id="content-links"></ol>
+        </section>
+        <section class="right">
+            <h2>By Chapter</h2>
+            <ul id="chapter-links"></ul>
+        </section>
+        
     </main>
 
 </body>
