--- a/week6/index.html
+++ b/week6/index.html
@@ -14,9 +14,14 @@
     </header>
     <main>
         <div id="tasks">
-            <div><button>Complete</button><p>div one</p><button>X</button></div>
-            <div><button>Complete</button><p>div one</p><button>X</button></div>
-            <div><button>Complete</button><p>div one</p><button>X</button></div>
+            <div>
+                <label class="container">
+                    <input type="checkbox" id="" value="completed">
+                    <span class="checkmark"></span>
+                </label>
+                <p>div one</p>
+                <button>X</button>
+            </div>
         </div>
         <div class="todo-filters"></div>
         <div class="add-todo-div">
