--- a/week4/notes4.html
+++ b/week4/notes4.html
@@ -88,6 +88,7 @@
             <li><a href="https://youtu.be/cRHQNNcYf6s" target="_blank">Javascript ES6 Modules</a></li>
             <li><a href="https://youtu.be/T2mFyPxL-fU" target="_blank">What is jQuery?</a> -Khan Academy</li>
             <li><a href="https://youtu.be/JjIvF0yikGU" target="_blank">Learn jQuery in 6 minutes</a></li>
+            <li><a href="https://youtu.be/LfeOLVGHiXI" target="_blank">Using Local Storage in JavaScript</a></li>
         </ul>
         <h4>Libraries</h4>
         <ul>
