--- a/week6/index.html
+++ b/week6/index.html
@@ -23,12 +23,17 @@
                 <button>X</button>
             </div>
         </div>
-        <div class="todo-filters"></div>
+        <div class="todo-filters">
+            <button id="allFilter">All</button>
+            <button id="activeFilter">Active</button>
+            <button id="completedFilter">Completed</button>
+        </div>
+    </main>
+    <footer>
         <div class="add-todo-div">
             <input id="todoInput" type="text">
             <button id="addBtn">ADD TASK</button>
         </div>
-        
-    </main>
+    </footer>
 </body>
 </html>
