--- a/week6/index.html
+++ b/week6/index.html
@@ -13,16 +13,7 @@
         <h1>TODOS</h1>
     </header>
     <main>
-        <div id="tasks">
-            <div>
-                <label class="container">
-                    <input type="checkbox" id="" value="completed">
-                    <span class="checkmark"></span>
-                </label>
-                <p>div one</p>
-                <button>X</button>
-            </div>
-        </div>
+        <div id="tasks"></div>
         <div class="todo-filters">
             <button id="allFilter">All</button>
             <button id="activeFilter">Active</button>
