--- a/week8/notes8.html
+++ b/week8/notes8.html
@@ -64,6 +64,10 @@
             <li></li>
         </ul>
         <h3 id="hch12">HTML5 and CSS3 for the Real World Ch 12: Canvas, SVG, Drag and Drop</h3>
+
+        <h4>Canvas</h4>
+        <h4>SVG</h4>
+        <h4>Drag and Drop</h4>
  
     </main>
     <footer>
