--- a/week8/notes8.html
+++ b/week8/notes8.html
@@ -65,7 +65,10 @@
         </ul>
         <h3 id="hch12">HTML5 and CSS3 for the Real World Ch 12: Canvas, SVG, Drag and Drop</h3>
 
-        <h4>Canvas</h4>
+        <h4>Videos</h4>
+        <ul>
+            <li><a href="https://youtube.com/playlist?list=PLpPnRKq7eNW3We9VdCfx9fprhqXHwTPXL" target="_blank">HTML 5 Canvas Tutorial Playlist</a></li>
+        </ul>
         <h4>SVG</h4>
         <h4>Drag and Drop</h4>
  
