--- a/week9/notes9.html
+++ b/week9/notes9.html
@@ -21,7 +21,25 @@
         <h2 class="center">Notes</h2>
         <h3 id="ch9">Ch9: The Window Object</h3>
         <h4>Videos</h4>
+        <ul>
+            <li><a href="https://youtu.be/ZrHusMEcNak" target="_blank">The Window Object Javascript Tutorial</a></li>
+            <li><a href="https://youtu.be/8tL5P-RtAH0" target="_blank">How to Get and Set Cookies with Javascript</a></li>
+        </ul>
+        <ul>
+            <li><span class="code">alert()</span>, <span class="code">confirm()</span> and <span class="code">prompt()</span> are all functions of the window object</li>
+            <li>The <span class="code">window.location</span> property is an object that contains info about the URL of the current page.</li>
+            <li>The <span class="code">window.history</span> property can access info about any previously visited pages in the current browser session</li>
+            <li>A new window can be opened using the <span class="code">window.open()</span> method</li>
+            <ul>
+                <li><span class="code">const popup = window.open('https://sitepoint.com','SitePoint', <br>'width=400,height=400,resizable=yes');</span></li>
+            </ul>
+            <li>Use the <span class="code">document.cookie</span> property to create a cookie</li>
+        </ul>
         <h3 id="ch14">Ch14: HTML5 APIs</h3>
+        <h4>Videos</h4>
+        <ul>
+            <li><a href="https://youtu.be/shoJ-PrfL3k" target="_blank">HTML5 APIs</a></li>
+        </ul>
     </main>
     <footer>
         <ul class="chapters">
