--- a/week8/canvas.html
+++ b/week8/canvas.html
@@ -7,7 +7,8 @@
     <title>Canvas Practice</title>
     <style type="text/css">
         canvas {
-            background-color: green;
+            /* background-color: green; */
+            background-color: #474056;
         }
         body {
             margin: 0;
@@ -18,4 +19,5 @@
     <canvas></canvas>
 </body>
 <script src="canvas.js"></script>
+<!-- <script src="canvas-mushroom.js"></script> -->
 </html>
