--- a/week8/notes8.html
+++ b/week8/notes8.html
@@ -13,7 +13,7 @@
         <h1>Week 8</h1>
     </header>
     <main>
-        <p><a href="#" target="_blank">Practice</a></p>
+        <p><a href="canvas.html" target="_blank">Canvas Practice</a></p>
         <ul class="chapters">
             <li><a href="#hch8">Ch8: Transforms and Tranisitions</a></li>
             <li><a href="#hch12">Ch12: Canvas, SVG, Drag and Drop</a></li>
@@ -68,8 +68,11 @@
         <h4>Videos</h4>
         <ul>
             <li><a href="https://youtube.com/playlist?list=PLpPnRKq7eNW3We9VdCfx9fprhqXHwTPXL" target="_blank">HTML 5 Canvas Tutorial Playlist</a></li>
+            <li><a href="https://youtu.be/vvuH6qS2M5Q" target="_blank">HTML 5 Tutorials #18 - Using SVG</a></li>
+            <li><a href="https://youtu.be/KyBmo_VffWI" target="_blank">HTML5 Tutorials #19 - SVG Inline and CSS Styling</a></li>
         </ul>
         <h4>SVG</h4>
+
         <h4>Drag and Drop</h4>
  
     </main>
