--- a/week10/notes10.html
+++ b/week10/notes10.html
@@ -13,7 +13,7 @@
         <h1>Week 10</h1>
     </header>
     <main>
-        <p><a href="#" target="_blank">Practice</a></p>
+        <!-- <p><a href="#" target="_blank">Practice</a></p> -->
         <ul class="chapters">
             <li><a href="#form">MDN: Form Validation</a></li>
             <li><a href="#fetch">MDN: Using Fetch</a></li>
@@ -30,9 +30,8 @@
             <li>Use javascript to customize the validation for forms</li>
         </ul>
         <h3 id="#fetch">MDN: Using Fetch</h3>
-        <h4>Videos</h4>
         <ul>
-            <li><a href="https://youtu.be/shoJ-PrfL3k" target="_blank">HTML5 APIs</a></li>
+            <li></li>
         </ul>
     </main>
     <footer>
