--- a/week8/notes8.html
+++ b/week8/notes8.html
@@ -70,10 +70,13 @@
             <li><a href="https://youtube.com/playlist?list=PLpPnRKq7eNW3We9VdCfx9fprhqXHwTPXL" target="_blank">HTML 5 Canvas Tutorial Playlist</a></li>
             <li><a href="https://youtu.be/vvuH6qS2M5Q" target="_blank">HTML 5 Tutorials #18 - Using SVG</a></li>
             <li><a href="https://youtu.be/KyBmo_VffWI" target="_blank">HTML5 Tutorials #19 - SVG Inline and CSS Styling</a></li>
+            <li><a href="https://youtu.be/OHTudicK7nY" target="_blank">How to use the Drag and Drop API</a></li>
+            
         </ul>
         <h4>SVG</h4>
 
         <h4>Drag and Drop</h4>
+
  
     </main>
     <footer>
