--- a/week9/notes9.html
+++ b/week9/notes9.html
@@ -24,6 +24,7 @@
         <ul>
             <li><a href="https://youtu.be/ZrHusMEcNak" target="_blank">The Window Object Javascript Tutorial</a></li>
             <li><a href="https://youtu.be/8tL5P-RtAH0" target="_blank">How to Get and Set Cookies with Javascript</a></li>
+            <li><a href="https://youtu.be/GihQAC1I39Q" target="_blank">JavaScript Cookies vs Local Storage vs Session</a></li>
         </ul>
         <ul>
             <li><span class="code">alert()</span>, <span class="code">confirm()</span> and <span class="code">prompt()</span> are all functions of the window object</li>
@@ -39,6 +40,8 @@
         <h4>Videos</h4>
         <ul>
             <li><a href="https://youtu.be/shoJ-PrfL3k" target="_blank">HTML5 APIs</a></li>
+            <li><a href="https://www.oreilly.com/library/view/javascript-programming/9781771370516/video162167.html" target="_blank">Shims, Shivs, and Polyfills</a> -O'Reilly</li>
+            <li><a href="" target="_blank"></a></li>
         </ul>
     </main>
     <footer>
