added team assign

--- a/week2/notes2.html
+++ b/week2/notes2.html
@@ -14,6 +14,7 @@
     </header> 
     <main>
         <p><a href="practice2.html">Practice</a></p>
+        <p><a href="team2/">Team Assignment</a></p>
         <ul class="chapters">
             <li><a href="notesch1.html">Ch 1 (Bonus)</a></li>
             <li><a href="#ch2">Ch 2</a></li>
