--- a/week4/notes4.html
+++ b/week4/notes4.html
@@ -14,6 +14,7 @@
     </header>
     <main>
         <p><a href="search.html">Practice</a></p>
+        <p><a href="tic-tac-toe/">Team Assignment</a></p>
         <ul class="chapters">
             <li><a href="#ch8">Ch 8</a></li>
             <li><a href="#ch12">Ch 12</a></li>
