--- a/week5/notes5.html
+++ b/week5/notes5.html
@@ -14,6 +14,7 @@
     </header>
     <main>
         <p><a href="#">Practice</a></p>
+        <p><a href="team5/GreatHikes.html">Team Assignment</a></p>
         <h2 class="center">Notes</h2>
         <h3 id="ch8">JavaScript: Novice to Ninja Ch 10: Testing and Debugging</h3>
         <h4>Errors, Exceptions, and Warnings</h4>
