--- a/week7/notes7.html
+++ b/week7/notes7.html
@@ -15,6 +15,7 @@
     <main>
         <p><a href="ajax-practice/" target="_blank">Ajax Practice</a></p>
         <p><a href="todo-practice/" target="_blank">Todo Practice</a></p>
+        <p><a href="team7/greatHikes.html">Team Assignment</a></p>
         <ul class="chapters">
             <li><a href="#ch11">Ch 11: Further Functions</a></li>
             <li><a href="#ch13">Ch 13: AJAX</a></li>
