--- a/week8/notes8.html
+++ b/week8/notes8.html
@@ -14,6 +14,7 @@
     </header>
     <main>
         <p><a href="canvas.html" target="_blank">Canvas Practice</a></p>
+        <p><a href="team8/">Team Assignment</a></p>
         <ul class="chapters">
             <li><a href="#hch8">Ch8: Transforms and Tranisitions</a></li>
             <li><a href="#hch12">Ch12: Canvas, SVG, Drag and Drop</a></li>
