--- a/week9/notes9.html
+++ b/week9/notes9.html
@@ -13,7 +13,7 @@
         <h1>Week 9</h1>
     </header>
     <main>
-        <p><a href="#" target="_blank">Practice</a></p>
+        <p><a href="team9/index-START.html">Team Assignment</a></p>
         <ul class="chapters">
             <li><a href="#ch9">Ch9: The Window Object</a></li>
             <li><a href="#ch14">Ch14: HTML5 APIs</a></li>
