--- a/week3/notes3.html
+++ b/week3/notes3.html
@@ -14,6 +14,7 @@
     </header>
     <main>
         <p><a href="practice3.html">Practice</a></p>
+        <p><a href="team3.html">Team Assignment</a></p>
         <ul class="chapters">
             <li><a href="#this">Object Methods: this</a></li>
             <li><a href="#ch5">Ch 5</a></li>
