--- a/final-project/index.html
+++ b/final-project/index.html
@@ -18,7 +18,7 @@
                 <li><button id="rectB">Rectangle</button></li>
                 <li><button>Circle</button></li>
                 <li><button>Line</button></li>
-                <li><button>Triangle</button></li>
+                <!-- <li><button>Triangle</button></li> -->
                 <li><button>Text</button></li>
             </ul>
             <div id="Text-div" class="toggle" style="display: none;">
