--- a/final-project/index.html
+++ b/final-project/index.html
@@ -15,11 +15,12 @@
         <h1>Draw 101</h1>
         <nav>
             <ul>
-                <li><button id="rectB">Rectangle</button></li>
-                <li><button>Circle</button></li>
-                <li><button>Line</button></li>
+                <li><button class="button" id="rectB">Rectangle</button></li>
+                <li><button class="button">Circle</button></li>
+                <li><button class="button">Line</button></li>
                 <!-- <li><button>Triangle</button></li> -->
-                <li><button>Text</button></li>
+                <li><button class="button">Text</button></li>
+                <li><button id="clear">Clear</button></li>
             </ul>
             <div id="Text-div" class="toggle" style="display: none;">
                 <form action="index.html" id="set-text">
